# MathematicaMCMC-1.0.0

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
Mathematica/mcmc/MathematicaMCMC/: IC2574_rotmod_header.txt  MathematicaMCMC.nb  citation_paper.bibtex  getdist-plots_and_stat.ipynb  getdist-plots_and_stat.py
doc/: Makefile.am  Makefile.in
doc/mcmc/: Makefile.am  Makefile.in
doc/mcmc/MathematicaMCMC/: Makefile.am  Makefile.in  MathematicaMCMC.1  MathematicaMCMC.info  MathematicaMCMC.texi
tests/mcmc/MathematicaMCMC/: IC2574_rotmod.txt
